Add NaN value check

--- a/1. data_preparation.ipynb
+++ b/1. data_preparation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "id": "b2gkjMaEQ5eO"
    },
@@ -32,7 +32,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of NaN values in each column:\n",
+      " Uniprot_ID                0\n",
+      "Gene_name                 8\n",
+      "Systematic_gene_name    864\n",
+      "Protein_Description       0\n",
+      "Peptide_sequence          0\n",
+      "Log2FC(LiP_raw)           0\n",
+      "Log2FC(LiP_norm)          0\n",
+      "Pvalue(LiP)               0\n",
+      "Qvalue(LiP)               0\n",
+      "Log2FC(P.Abundance)     864\n",
+      "Pvalue(P.Abundance)       0\n",
+      "Qvalue(P.Abundance)       0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for NaN values in each column\n",
+    "nan_per_column = df.isna().sum()\n",
+    "print(\"Number of NaN values in each column:\\n\", nan_per_column)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove rows with any missing values\n",
+    "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of NaN values in each column:\n",
+      " Uniprot_ID              0\n",
+      "Gene_name               0\n",
+      "Systematic_gene_name    0\n",
+      "Protein_Description     0\n",
+      "Peptide_sequence        0\n",
+      "Log2FC(LiP_raw)         0\n",
+      "Log2FC(LiP_norm)        0\n",
+      "Pvalue(LiP)             0\n",
+      "Qvalue(LiP)             0\n",
+      "Log2FC(P.Abundance)     0\n",
+      "Pvalue(P.Abundance)     0\n",
+      "Qvalue(P.Abundance)     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for NaN values in each column after dropping nan valus\n",
+    "nan_per_column = df.isna().sum()\n",
+    "print(\"Number of NaN values in each column:\\n\", nan_per_column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "id": "tif0zHXPTkyh"
    },
@@ -43,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -123,7 +197,7 @@
        "4     P15703         SVVADISDSDGK         -0.434615"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
