--- a/5. dl_model.ipynb
+++ b/5. dl_model.ipynb
@@ -18,26 +18,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "\n",
     "# Get the embeddings\n",
-    "embeddings = pd.read_csv(\"data/OsmoticStress_with_binary_positions_and_embeddings.csv\", index_col=0)\n",
-    "embeddings = embeddings.drop(columns=[\"full_sequence\"])\n",
+    "with open('data/embeddings_test.pkl', 'rb') as file:\n",
+    "    embeddings = pickle.load(file)\n",
+    "embeddings.set_index('Uniprot_ID', inplace=True)\n",
+    "embeddings = embeddings.drop(columns=['full_sequence'])\n",
     "\n",
     "# Get the dataset\n",
     "df = pd.read_csv('data/OsmoticStress_with_binary_positions.csv')\n",
+    "df['Binary_Positions'] = df['Binary_Positions'].apply(json.loads)\n",
     "df.drop(columns=['full_sequence', 'Peptide_sequence'], inplace=True)\n",
+    "#df[\"full_sequence\"]= df[\"full_sequence\"].astype(str)\n",
     "df.set_index('Uniprot_ID', inplace=True)\n",
     "\n",
     "# Merge the two and get the final dataset\n",
@@ -46,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -83,34 +90,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>A5Z2X5</th>\n",
-       "      <td>-0.153604</td>\n",
+       "      <th>P00359</th>\n",
+       "      <td>2.790874</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[8848178386688232, 7881519943475723, 428928285...</td>\n",
+       "      <td>[[0.05060335993766785, -0.002109627239406109, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>A5Z2X5</th>\n",
-       "      <td>-1.869623</td>\n",
+       "      <th>P00359</th>\n",
+       "      <td>1.034246</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[8848178386688232, 7881519943475723, 428928285...</td>\n",
+       "      <td>[[0.05060335993766785, -0.002109627239406109, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>D6VTK4</th>\n",
-       "      <td>-0.008114</td>\n",
+       "      <th>P00359</th>\n",
+       "      <td>0.126493</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[47565970569849014, 7273535244166851, 22035147...</td>\n",
+       "      <td>[[0.05060335993766785, -0.002109627239406109, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>O13297</th>\n",
-       "      <td>-0.374875</td>\n",
+       "      <th>P00359</th>\n",
+       "      <td>0.934679</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[21353999618440866, 15769580379128456, 4766600...</td>\n",
+       "      <td>[[0.05060335993766785, -0.002109627239406109, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>O13297</th>\n",
-       "      <td>-0.207803</td>\n",
+       "      <th>P00359</th>\n",
+       "      <td>0.537110</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[21353999618440866, 15769580379128456, 4766600...</td>\n",
+       "      <td>[[0.05060335993766785, -0.002109627239406109, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -119,30 +126,30 @@
       "text/plain": [
        "            Log2FC(LiP_norm)  \\\n",
        "Uniprot_ID                     \n",
-       "A5Z2X5             -0.153604   \n",
-       "A5Z2X5             -1.869623   \n",
-       "D6VTK4             -0.008114   \n",
-       "O13297             -0.374875   \n",
-       "O13297             -0.207803   \n",
+       "P00359              2.790874   \n",
+       "P00359              1.034246   \n",
+       "P00359              0.126493   \n",
+       "P00359              0.934679   \n",
+       "P00359              0.537110   \n",
        "\n",
        "                                             Binary_Positions  \\\n",
        "Uniprot_ID                                                      \n",
-       "A5Z2X5      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "A5Z2X5      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "D6VTK4      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "O13297      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "O13297      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "P00359      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "P00359      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "P00359      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "P00359      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "P00359      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
        "\n",
        "                                               full_embedding  \n",
        "Uniprot_ID                                                     \n",
-       "A5Z2X5      [8848178386688232, 7881519943475723, 428928285...  \n",
-       "A5Z2X5      [8848178386688232, 7881519943475723, 428928285...  \n",
-       "D6VTK4      [47565970569849014, 7273535244166851, 22035147...  \n",
-       "O13297      [21353999618440866, 15769580379128456, 4766600...  \n",
-       "O13297      [21353999618440866, 15769580379128456, 4766600...  "
+       "P00359      [[0.05060335993766785, -0.002109627239406109, ...  \n",
+       "P00359      [[0.05060335993766785, -0.002109627239406109, ...  \n",
+       "P00359      [[0.05060335993766785, -0.002109627239406109, ...  \n",
+       "P00359      [[0.05060335993766785, -0.002109627239406109, ...  \n",
+       "P00359      [[0.05060335993766785, -0.002109627239406109, ...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,8 +172,224 @@
     "    cleaned_string = re.sub(r\"[^\\d,\\s]\", \"\", number_string)\n",
     "    return list(map(int, cleaned_string.split(',')))\n",
     "\n",
-    "dataset['full_embedding'] = dataset['full_embedding'].apply(convert_to_list)\n",
-    "dataset['Binary_Positions'] = dataset['Binary_Positions'].apply(convert_to_list)"
+    "#dataset['Binary_Positions'] = dataset['Binary_Positions'].apply(convert_to_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def matrix_shape_lists(x):\n",
+    "#    return len(x), len(x[0])\n",
+    "\n",
+    "# dataset['Binary_Positions_shape'] = dataset['Binary_Positions'].apply(len)\n",
+    "# dataset['full_embedding_shape'] = dataset['full_embedding'].apply(matrix_shape_lists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Log2FC(LiP_norm)</th>\n",
+       "      <th>Binary_Positions</th>\n",
+       "      <th>full_embedding</th>\n",
+       "      <th>Binary_Positions_shape</th>\n",
+       "      <th>full_embedding_shape</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Uniprot_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>P00359</th>\n",
+       "      <td>2.790874</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[[0.05060335993766785, -0.002109627239406109, ...</td>\n",
+       "      <td>332</td>\n",
+       "      <td>(334, 1280)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P00359</th>\n",
+       "      <td>1.034246</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[[0.05060335993766785, -0.002109627239406109, ...</td>\n",
+       "      <td>332</td>\n",
+       "      <td>(334, 1280)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P00359</th>\n",
+       "      <td>0.126493</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[[0.05060335993766785, -0.002109627239406109, ...</td>\n",
+       "      <td>332</td>\n",
+       "      <td>(334, 1280)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P00359</th>\n",
+       "      <td>0.934679</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[[0.05060335993766785, -0.002109627239406109, ...</td>\n",
+       "      <td>332</td>\n",
+       "      <td>(334, 1280)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P00359</th>\n",
+       "      <td>0.537110</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[[0.05060335993766785, -0.002109627239406109, ...</td>\n",
+       "      <td>332</td>\n",
+       "      <td>(334, 1280)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Q04305</th>\n",
+       "      <td>-0.152980</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[[0.02415088191628456, 0.025609467178583145, 0...</td>\n",
+       "      <td>513</td>\n",
+       "      <td>(515, 1280)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Q04305</th>\n",
+       "      <td>-1.006271</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[[0.02415088191628456, 0.025609467178583145, 0...</td>\n",
+       "      <td>513</td>\n",
+       "      <td>(515, 1280)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Q04305</th>\n",
+       "      <td>-0.148364</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[[0.02415088191628456, 0.025609467178583145, 0...</td>\n",
+       "      <td>513</td>\n",
+       "      <td>(515, 1280)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Q3E7Y3</th>\n",
+       "      <td>-2.278925</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[[0.09522184729576111, -0.048017729073762894, ...</td>\n",
+       "      <td>130</td>\n",
+       "      <td>(132, 1280)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Q3E7Y3</th>\n",
+       "      <td>-1.422094</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[[0.09522184729576111, -0.048017729073762894, ...</td>\n",
+       "      <td>130</td>\n",
+       "      <td>(132, 1280)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>395 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Log2FC(LiP_norm)  \\\n",
+       "Uniprot_ID                     \n",
+       "P00359              2.790874   \n",
+       "P00359              1.034246   \n",
+       "P00359              0.126493   \n",
+       "P00359              0.934679   \n",
+       "P00359              0.537110   \n",
+       "...                      ...   \n",
+       "Q04305             -0.152980   \n",
+       "Q04305             -1.006271   \n",
+       "Q04305             -0.148364   \n",
+       "Q3E7Y3             -2.278925   \n",
+       "Q3E7Y3             -1.422094   \n",
+       "\n",
+       "                                             Binary_Positions  \\\n",
+       "Uniprot_ID                                                      \n",
+       "P00359      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "P00359      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "P00359      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "P00359      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "P00359      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "...                                                       ...   \n",
+       "Q04305      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "Q04305      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "Q04305      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "Q3E7Y3      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "Q3E7Y3      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "\n",
+       "                                               full_embedding  \\\n",
+       "Uniprot_ID                                                      \n",
+       "P00359      [[0.05060335993766785, -0.002109627239406109, ...   \n",
+       "P00359      [[0.05060335993766785, -0.002109627239406109, ...   \n",
+       "P00359      [[0.05060335993766785, -0.002109627239406109, ...   \n",
+       "P00359      [[0.05060335993766785, -0.002109627239406109, ...   \n",
+       "P00359      [[0.05060335993766785, -0.002109627239406109, ...   \n",
+       "...                                                       ...   \n",
+       "Q04305      [[0.02415088191628456, 0.025609467178583145, 0...   \n",
+       "Q04305      [[0.02415088191628456, 0.025609467178583145, 0...   \n",
+       "Q04305      [[0.02415088191628456, 0.025609467178583145, 0...   \n",
+       "Q3E7Y3      [[0.09522184729576111, -0.048017729073762894, ...   \n",
+       "Q3E7Y3      [[0.09522184729576111, -0.048017729073762894, ...   \n",
+       "\n",
+       "            Binary_Positions_shape full_embedding_shape  \n",
+       "Uniprot_ID                                               \n",
+       "P00359                         332          (334, 1280)  \n",
+       "P00359                         332          (334, 1280)  \n",
+       "P00359                         332          (334, 1280)  \n",
+       "P00359                         332          (334, 1280)  \n",
+       "P00359                         332          (334, 1280)  \n",
+       "...                            ...                  ...  \n",
+       "Q04305                         513          (515, 1280)  \n",
+       "Q04305                         513          (515, 1280)  \n",
+       "Q04305                         513          (515, 1280)  \n",
+       "Q3E7Y3                         130          (132, 1280)  \n",
+       "Q3E7Y3                         130          (132, 1280)  \n",
+       "\n",
+       "[395 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
    ]
   },
   {
@@ -179,7 +402,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "trimmed_embeddings = [np.array(embedding)[1:-1, :] for embedding in dataset['full_embedding']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1090\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_length = max(embedding.shape[0] for embedding in trimmed_embeddings)\n",
+    "print(max_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,10 +438,39 @@
     "import torch.nn as nn\n",
     "import numpy as np\n",
     "\n",
-    "# Convert the embeddings to a tensor\n",
-    "embedding_array = np.array(dataset['full_embedding'].tolist(), dtype=np.float32)\n",
-    "full_embedding = torch.tensor(embedding_array)\n",
-    "\n",
+    "padded_embeddings = [np.pad(embedding, ((0, max_length - embedding.shape[0]), (0, 0)), \n",
+    "                             mode='constant', constant_values=0)\n",
+    "                     for embedding in trimmed_embeddings]\n",
+    "padded_embeddings_array = np.array(padded_embeddings, dtype=np.float32)\n",
+    "full_embedding = torch.tensor(padded_embeddings_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([395, 1090, 1280])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_embedding.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create the position embeddings\n",
     "position_embedding_dim = len(dataset.iloc[0, 2]) \n",
     "num_positions = 20\n",
@@ -200,10 +480,31 @@
     "position_indices = torch.tensor([x[0] for x in dataset['Binary_Positions']])\n",
     "position_embed = position_embedding(position_indices)\n",
     "\n",
-    "# Combine the embeddings\n",
-    "combined_embeddings = position_embed + full_embedding\n",
     "\n",
-    "combined_embeddings_list = combined_embeddings.tolist()"
+    "# Combine the embeddings\n",
+    "#combined_embeddings = position_embed + full_embedding\n",
+    "\n",
+    "#combined_embeddings_list = combined_embeddings.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([395, 334])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "position_embed.shape"
    ]
   },
   {
